--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -27,6 +27,13 @@
               </div>
             
           </ion-col>
+
+          <div>
+             <ion-label class="facebooklabel" (click)="auth.login()" >
+              <ion-icon name="logo-facebook"></ion-icon>
+               Click here to sign in with Facebook
+              </ion-label>
+          </div>
         </ion-row>
 
       </ion-grid>
