--- a/src/app/pages/main/main.page.html
+++ b/src/app/pages/main/main.page.html
@@ -42,10 +42,10 @@
                     <ion-col>
                       <ion-segment value="Sexo">
                         <ion-segment-button value="hombre">
-                          <ion-label>H</ion-label>
+                          <ion-label>M (masculino)</ion-label>
                         </ion-segment-button>
                         <ion-segment-button value="mujer">
-                          <ion-label>M</ion-label>
+                          <ion-label>F (femenino)</ion-label>
                         </ion-segment-button>
                       </ion-segment>
                     </ion-col>
