--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -33,6 +33,10 @@
       </label>
       <br>
       <label>
+        Sexo: {{localperfil.sexo}}
+      </label>
+      <br>
+      <label>
         Ubicación: {{localperfil.ubicacion}}
       </label>
       <br>
