--- a/src/app/pages/chatroom/chatroom.page.html
+++ b/src/app/pages/chatroom/chatroom.page.html
@@ -8,16 +8,16 @@
   <ion-grid>
     <ion-row *ngFor="let message of messages">
       
-      <ion-col col-9 *ngIf="message.from !== username" class="message" [ngClass]="{'my_message': message.from === username, 'other_message': message.from !== username}">
-        <span class="user_name">{{ message.from}}:</span><br>
-        <span>{{ message.text }}</span>
-        <div class="time">{{message.created | date:'dd.MM hh:MM'}}</div>
+      <ion-col col-9 *ngIf="message.author !== username" class="message" >
+        <span class="user_name">{{ message.author}}:</span><br>
+        <span>{{ message.mensaje }}</span>
+        <div class="time">{{message.date | date:'dd.MM hh:MM'}}</div>
       </ion-col>
  
-      <ion-col offset-3 col-9 *ngIf="message.from === username" class="message" [ngClass]="{'my_message': message.from === username, 'other_message': message.from !== username}">
+      <ion-col offset-3 col-9 *ngIf="message.author === username" class="message" >
         <span class="user_name">{{ username }}:</span><br>
-        <span>{{ message.text }}</span>
-        <div class="time">{{message.created | date:'dd.MM hh:MM'}}</div>
+        <span>{{ message.mensaje }}</span>
+        <div class="time">{{message.date | date:'dd.MM hh:MM'}}</div>
       </ion-col>
  
     </ion-row>
@@ -34,8 +34,16 @@
         </ion-item>
       </ion-col>
       <ion-col col-3>
-        <ion-button clear color="primary" (click)="sendMessage()" [disabled]="message === ''">&#10146;</ion-button>
+        <ion-button clear color="primary" (click)="sendMessage(message)" [disabled]="message === ''">&#10146;</ion-button>
       </ion-col>
     </ion-row>
   </ion-toolbar>
 </ion-footer>
+
+
+<!-- 
+<ion-col offset-3 col-9 *ngIf="message.from === username" class="message" [ngClass]="{'my_message': message.from === username, 'other_message': message.from !== username}">
+  <span class="user_name">{{ username }}:</span><br>
+  <span>{{ message.text }}</span>
+  <div class="time">{{message.created | date:'dd.MM hh:MM'}}</div>
+</ion-col> -->
