--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="success">
     <ion-title>Home</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -8,17 +8,19 @@
 
   <ion-card>
     <ion-card-header>
-      <img src="../../../assets/Tenis Ball Icon.png"/>
+      <ion-row class="ion-justify-content-center">
+        <img src="../../../assets/Tenis Ball Icon.png"/>
+      </ion-row>
       <ion-card-title>Accede a Rackets4All</ion-card-title>
       <ion-card-subtitle>Con tu Usuario de Rackets4All o autentícate con Facebook</ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
-      <div class="log">
+      <ion-row class="ion-justify-content-center">
         <ion-button class="button icon icon-left ion-finger-print" (click)=goLogin()>Login</ion-button>
-      </div>
-      <div class="reg">
+      </ion-row>
+      <ion-row class="ion-justify-content-center">
         <ion-button class="button icon icon-left ion-create" (click)=goRegister()>Register</ion-button>
-      </div>
+      </ion-row>
     </ion-card-content>
   </ion-card>
 
